<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".DetailsView"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/photoDisplay"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/room_name"
            android:textStyle="bold" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/details_RoomName"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:text="Name" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/address"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/details_Address"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Name" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:text="@string/minimum_stay"
            />
        <TextView
            android:layout_weight="1"
            android:id="@+id/details_MinDays"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="Name" />
    </LinearLayout>



    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:text="@string/maximum_stay"
            />
        <TextView
            android:layout_weight="1"
            android:id="@+id/details_maxDays"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="Name" />
    </LinearLayout>


    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:text="@string/rent_day"
            android:textStyle="bold"
            />

        <TextView
            android:layout_weight="1"
            android:id="@+id/details_rent"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="Name" />
    </LinearLayout>


    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            />

        <TextView
            android:layout_weight="1"
            android:id="@+id/details_Phone"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Name" />
    </LinearLayout>


    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textStyle="bold"
            />

        <TextView
            android:layout_weight="1"
            android:id="@+id/details_status"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="Name" />

    </LinearLayout>


    <Button
        android:layout_margin="10dp"
        android:id="@+id/details_BookNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/background_softcorner"
        android:backgroundTint="@color/buttonColor"
        android:text="Book Now"
        tools:visibility="invisible" />
    <Button
        android:id="@+id/details_deleteRoom"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="invisible"
        android:backgroundTint="@color/buttonColor"
        android:background="@drawable/background_softcorner"
        android:text="Delete Room"
        />
</LinearLayout>
