<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".SplashScreens.WelcomeActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="4"
        android:weightSum="5"
        >

        <ImageView
            android:layout_width="660dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:src="@drawable/logoorange"
            android:paddingLeft="35dp"
            android:paddingRight="15dp" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:layout_weight="3"
            android:tint="@color/dark"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/welcomecolor"
            android:text="@string/welcome"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/welcome_signin_btn"
            android:text="@string/sign_in"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:backgroundTint="@color/buttonColor"
            android:background="@drawable/background_softcorner"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_signup_btn"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textSize="15sp"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:backgroundTint="@color/buttonColor"
            android:background="@drawable/background_softcorner"
            android:textColor="@color/white"/>
    </LinearLayout>



</LinearLayout>