<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".NewRoomAdd">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:background="@color/white">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:tint="@color/dark"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_new_room"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/buttonColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Room Name"
                        android:layout_marginTop="10dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/roomName"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/grey_cursor_color"
                        android:textSize="15sp" />
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/buttonColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="Address Line 1"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/addressLine1"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="#000000"
                        android:paddingRight="44.3dp"
                        android:textCursorDrawable="@drawable/grey_cursor_color"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/buttonColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/city"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/city"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:inputType="text"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="#000000"
                        android:paddingRight="44.3dp"
                        android:textCursorDrawable="@drawable/grey_cursor_color"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/buttonColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/minimum_stay"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/minimumBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:inputType="number"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:paddingRight="44.3dp"
                        android:textColor="@color/black"
                        android:textColorHint="#000000"
                        android:textCursorDrawable="@drawable/grey_cursor_color"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/buttonColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/maximum_stay"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/maximumBook"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:inputType="number"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="#000000"
                        android:paddingRight="44.3dp"
                        android:textCursorDrawable="@drawable/grey_cursor_color"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/buttonColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/rent_day"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rent"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:inputType="number"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="#000000"
                        android:paddingRight="44.3dp"
                        android:textCursorDrawable="@drawable/grey_cursor_color"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/buttonColor" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"/>

                    <Button
                        android:id="@+id/addPhoto"
                        android:padding="10px"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_photo"
                        android:layout_marginTop="20dp"
                        android:paddingTop="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/buttonColor"
                        android:background="@drawable/background_softcorner"/>


                    <Button
                        android:id="@+id/addRoom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_room"
                        android:layout_marginTop="20dp"
                        android:paddingTop="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/buttonColor"
                        android:background="@drawable/background_softcorner"/>

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:background="@drawable/logoorange"
                android:id="@+id/id_logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="-120dp"
                />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>